done third container

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             
             <div class="div-container2 ">
 
-                <img src="./img/item1.svg" alt="" id="img-container2">
+                <img src="./img/item1.svg" alt="" class="img-container2">
 
 
             </div>
@@ -120,14 +120,20 @@
 
                 <h2>Dove trovarsi è <br>facile</h2>
 
-                <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì
-                    e unirsi istantaneamente senza dover chiamare.
+                <p>Mettiti comodo in un canale vocale <br> quando hai tempo. Gli amici nel tuo <br> server possono vedere che sei lì
+                    e unirsi <br> istantaneamente senza dover chiamare.
                 </p>
 
 
             </div>
 
             <div class="div-container3">
+
+            <div>
+                <img src="./img/item2.svg" alt="" class="img-container2">
+
+                
+            </div>
 
 
             </div>
