done 4th container

--- a/index.html
+++ b/index.html
@@ -146,11 +146,19 @@
             
             <div class="div-container2 ">
 
+                <img src="./img/item3.svg" alt="" class="img-container2">
+
 
             </div>
 
             <div class="div-container2-1">
 
+                <h2>Da pochi a un <br>fandom</h2>
+
+                <p>Dai inizio a una community di qualsiasi <br> dimensione con strumenti di <br>
+                    moderazione e accesso ai membri <br> personalizzabile. Concedi ai membri <br>
+                    poteri speciali, crea canali privati, e <br> molto altro.
+                </p>
 
             </div>
 
